# biblical_screenwriter

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: python-tests.yml  tests.yml
src/: bible_tool.py  models.py  utils.py
src/agents/: roteiro_agent.py  youtube_detail_agent.py  youtube_info_agent.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_bible_tool.py  test_integration.py  test_models.py  test_utils.py
