[project]
name = "agno-roteirista-biblico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.7.6",
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "openai>=1.97.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
